- Bugfix: Removing of message keys should work again.
- Bugfix: Duplicate messages will not be displayed anymore.
- Bugfix: Fixed a possible fatal, when trying to analyse dynamically
  declared properties, which have a name collusion with private
  properties somewhere deeper in the class inheritance.
- Bugfix: Detect unset properties in classes.
- Bugfix: Added closing style tags to both skins

2.4.0
- Added the method analysis to the recursion detection, to prevent
  analysing the same methods over and over again.
- Added Javascript optimisation for very large output.
- Added mimetype analysis for strings.
- Added prosessing class for "other" variable types.
- Added info button to the hans skin, to replace the somewhat
  intrusive hover info.
- Change: Moved the overwrites from the GLOBALS to a static class
- Change: Prettified the display of sourcecode in the backtrace in
  the smoky grey skin.
- Change: Removed the option for the atomatic registration of the
  fatal error handler.
- Change: Lots of micro optimizations.
- Bugfix: Minimise CSS interference from the hosting cms with
  marked text.
- Change: Simplified array analysis is now configurable.
- Change: Renamed the 'Backtrace' config group to 'pruneOutput'.
- Bugfix: Disabling via sourcecode works again.
- Bugfix: Removed the special backtrace configuration, which
  resulted in a output overkill, crashing the backtrace.
- Bugfix: Removed the comma in the method parameter analysis.
- Bugfix: Fixed in issue, where the correct nesting level was not
  set correctly, resulting in output overkill.
- Bugfix: Fixed codewrapper2 for the code generation in the Hans
  skin.
- Bugfix: Source generation for closures now work as expected.
- Bugfix: Better cleanup for still open HTML tags.

2.3.1
- Bugfix: Fixed shell detection.
- Bugfix: Fixed shell message feedback
- Bugfix: Fixed ajax detection

2.3.0
- Added a configuration for the backtrace, to limit the analysed
  steps.
- Added property comments to the analysis